--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<html lang="en">
+
+<head>
+  <meta name="description" content="Competition card for 12hr of Mountain Quarry Madness" />
+  <meta charset="utf-8">
+  <title>Mountain Quarry Madness</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="">
+</head>
+
+<body>
+
+  <iframe src="https://script.google.com/macros/s/AKfycbz6jz7_aYp7B3ogcvKlTl4gQh1JxLwF_Us1RpetsKlsUUNDeUo8olqm8w5C5JRVpAqo/exec" frameborder="0" width="100%" height="900px" ></iframe>
+
+</body>
+
 </html>
