--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  
+  <img src="/pictures/full white on transparent.png" class="img-fluid mx-auto my-3 d-block" alt="CAWA">
 
   <iframe src="https://script.google.com/macros/s/AKfycbz6jz7_aYp7B3ogcvKlTl4gQh1JxLwF_Us1RpetsKlsUUNDeUo8olqm8w5C5JRVpAqo/exec" frameborder="0" width="100%" height="1000px" ></iframe>
 
