--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
   <meta name="description" content="Competition card for 12hr of Mountain Quarry Madness" />
   <meta charset="utf-8">
-  <title>Mountain Quarry Madness</title>
+  <title>Mountain Quarry Madness 2022</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="">
 </head>
 
 <body>
-  
-  <iframe src="https://script.google.com/macros/s/AKfycbz6jz7_aYp7B3ogcvKlTl4gQh1JxLwF_Us1RpetsKlsUUNDeUo8olqm8w5C5JRVpAqo/exec" frameborder="0" width="100%" height="1000px" ></iframe>
+
+  <iframe
+    src="https://script.google.com/macros/s/AKfycbz6jz7_aYp7B3ogcvKlTl4gQh1JxLwF_Us1RpetsKlsUUNDeUo8olqm8w5C5JRVpAqo/exec"
+    frameborder="0" width="100%" height="1000px"></iframe>
 
 </body>
 
