--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="description" content="Competition card for 12hr of Mountain Quarry Madness" />
   <meta charset="utf-8">
-  <title>Mountain Quarry Madness 2022</title>
+  <title>12 hrs of Mountain Quarry Madness 2023</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="">
 </head>
